tests/baselines/reference/project/nestedLocalModuleWithRecursiveTypecheck/node/nestedLocalModuleWithRecursiveTypecheck.errors.txt
error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
test1.ts(3,23): error TS1147: Import declarations in a namespace cannot reference a module.
test1.ts(3,23): error TS2792: Cannot find module 'test2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== test1.ts (2 errors) ====
    namespace myModule {
     
     import foo = require("test2");
                          ~~~~~~~
!!! error TS1147: Import declarations in a namespace cannot reference a module.
                          ~~~~~~~
!!! error TS2792: Cannot find module 'test2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    
     //console.log(foo.$);
    
     var z = foo.Yo.y();
    
    }
    
    export var x = 0;
    